# backend/api-docs/api-docs.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: OpenAPI definition
   version: v0
@@ -29,6 +29,19 @@ paths:
       tags:
       - user-rest-controller
       operationId: editUserProfile
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserNoImageDTO"
+        required: true
       responses:
         "200":
           description: OK
@@ -589,6 +602,17 @@ paths:
                 type: object
 components:
   schemas:
+    CommentBasicDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        createdDate:
+          type: string
+          format: date
+        text:
+          type: string
     CourseBasicDTO:
       type: object
       properties:
@@ -608,17 +632,6 @@ components:
           type: array
           items:
             type: string
-    CommentBasicDTO:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        createdDate:
-          type: string
-          format: date
-        text:
-          type: string
     UserNoImageDTO:
       type: object
       properties:
